# Self-Organizing-Map

./: .gitignore  CMakeLists.txt  Libro1.csv  README.md  RedNeuronalArificial.cbp  RedNeuronalArificial.depend  RedNeuronalArificial.layout  ejemplo1.js  hex.htm  hexagons.js  main.cpp  valores.js
include/: CriterioSupervision.h  NeuronaHex.h  Validacion.h  Visualizacion.h  arreglos.h  configuracion.h  distancias.h  ficherorna.h  gestionadorsom.h  neurona.h  som.h  valores.h
src/: Validacion.cpp  Visualizacion.cpp  configuracion.cpp  ficherorna.cpp  gestionadorsom.cpp  neurona.cpp  som.cpp
